--- a/styles/style.css
+++ b/styles/style.css
@@ -1,33 +1,33 @@
 @font-face {
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans";
   font-size: normal;
   font-weight: 700;
-  src: url(/fonts/ptsans-400.woff2) format("woff2");
+  src: url("../fonts/ptsans-700.woff2") format("woff2");
   font-display: swap;
 }
 
 @font-face {
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans";
   font-size: normal;
   font-weight: 400;
-  src: url(/fonts/ptsans-400.woff2) format("woff2");
+  src: url("../fonts/ptsans-400.woff2");
   font-display: swap;
 }
 
 body {
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans";
   font-size: 24px;
   line-height: 28px;
   color: #000000;
   background-color: #ffffff;
+  text-align: center;
 }
 
-/*VH
+
 .visually-hidden {
   position: fixed;
   transform: scale(0);
 }
-*/
 
 ul {
   list-style: none;
@@ -66,26 +66,26 @@ ul {
 }
 
 .navigation-icons__link__search {
-  background-image: url(/images/icons/search.svg);
+  background-image: url("../images/icons/search.svg");
   background-repeat: no-repeat;
 }
 
 .navigation-icons__items__heart {
-  background-image: url(/images/icons/heart.svg);
+  background-image: url("../images/icons/heart.svg");
   background-repeat: no-repeat;
 }
 
-.main-index {
-  background-image: url(/images/index-background.jpg);
+.main-index-welcome {
+  background-image: url("../images/index-background.jpg");
   background-size: 100% auto;
   background-repeat: no-repeat;
   text-align: center;
   color: #ffffff;
-  background-color: rgba(131, 179, 211, 0.12);
+  background-color: rgba(131, 179, 211, 12);
 }
 
 .main-index__text {
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans";
   font-style: normal;
   font-weight: 700;
   font-size: 30px;
@@ -96,7 +96,7 @@ ul {
 }
 
 .main-index__description {
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans";
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
@@ -212,7 +212,7 @@ ul {
 }
 
 .follow {
-  background-image: url(/images/subscribe.jpg);
+  background-image: url("../images/subscribe.jpg");
   color: #ffffff;
   background-color: rgba(131, 179, 211, 0.12);
   height: 415px;
@@ -237,13 +237,13 @@ ul {
 .footer-htmlacademy-link {
   width: 115px;
   height: 33px;
-  background-image: url(/images/icons-footer/htmlacademy-logotype.png);
+  background-image: url("../images/icons-footer/htmlacademy-logotype.png");
   background-repeat: no-repeat;
 }
 
 /*Catalog*/
 .main-catalog {
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans";
   text-decoration: none;
   text-align: center;
   font-style: normal;
@@ -255,7 +255,8 @@ ul {
 
 .catalog_filter {
   color: #ffffff;
-  background-image: url(/images/catalog/fone-filter.jpg);
+  background-image: url("../images/catalog/fone-filter.jpg");
+  background-color: hsl(204, 48%, 67%);
   background-repeat: no-repeat;
   background-size: 100% auto;
 }
@@ -267,6 +268,10 @@ ul {
 }
 
 /*bradcrumbs*/
+.breadcrumbs {
+  list-style-type: none;
+}
+
 .breadcrumbs__link a {
   text-decoration: none;
   color: #ffffff;
@@ -317,7 +322,7 @@ ul {
 }
 
 .slider-button-to {
-  background: rgba(130,179,211, 0);
+  background: #82b3d300;
 }
 
 .hotels {
@@ -388,8 +393,8 @@ ul {
   text-transform: uppercase;
 }
 
-.pagination a{
-  font-family: 'PT Sans';
+.pagination a {
+  font-family: "PT Sans";
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
@@ -404,7 +409,13 @@ ul {
   background-color: #f2f2f2;
 }
 
-.pagination-hidden a{
+.pagination-hidden a {
   color: #000000;
   background-color: rgba(0, 0, 0, 0);
+}
+
+.social__link__youtube {
+  background-image: url("../images/icons-footer/icon-youtube.svg");
+  background-repeat: no-repeat;
+  position: relative;
 }
